--- a/gameWish/vercel.json
+++ b/gameWish/vercel.json
@@ -1,13 +1,24 @@
 {
-    "builds": [{
+    "version": 2,
+    "builds": [
+      {
         "src": "gameWish/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static"
+      }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "gameWish/wsgi.py"
-        }
+      {
+        "src": "/staticfiles/(.*)",
+        "dest": "/staticfiles/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "gameWish/wsgi.py"
+      }
     ]
-}
+  }
