--- a/gameWish/vercel.json
+++ b/gameWish/vercel.json
@@ -1,24 +1,26 @@
 {
-    "version": 2,
     "builds": [
       {
-        "src": "gameWish/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "src": "gameWish.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
       },
       {
-        "src": "build_files.sh",
-        "use": "@vercel/static"
+        "src": "/gameWish/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb" }
       }
     ],
     "routes": [
       {
-        "src": "/staticfiles/(.*)",
-        "dest": "/staticfiles/$1"
-      },
-      {
         "src": "/(.*)",
         "dest": "gameWish/wsgi.py"
+      },
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
       }
     ]
   }
