building error vercel

--- a/gameWish/vercel.json
+++ b/gameWish/vercel.json
@@ -8,7 +8,7 @@
         }
       },
       {
-        "src": "/gameWish/wsgi.py",
+        "src": "/gameWish/asgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb" }
       }
@@ -16,7 +16,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "gameWish/wsgi.py"
+        "dest": "gameWish/asgi.py"
       },
       {
         "src": "/static/(.*)",
